# minedata

./: Dickens Research Proposal_Reviewed Clif.docx  My publications.docx  README.md  alarm_system.py  dashboard.html  dashboard.py  emergency_response.py  forecasting.py  login.html  main.py  mine_data.db  mine_monitoring.py  mine_monitoring_master.py  pyproject.toml  requirements.txt  system_manager.py
